--- a/css/mystyles-ark.css
+++ b/css/mystyles-ark.css
@@ -38,6 +38,7 @@ a {
 .cards4 {background-image: url("../images-ark/cards4.jpg")}
 .cards5 {background-image: url("../images-ark/cards5.jpg")}
 .cards6 {background-image: url("../images-ark/cards6.jpg")}
+.cards-promo {background-image: url("../images-ark/cards-promo.jpg")}
 
 .c2 {background-position-x: -240px}
 .c3 {background-position-x: -480px}
